--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,15 @@
 version: 2.1
 orbs:
-  node: circleci/node@5.0.1
-  aws-cli: circleci/aws-cli@1.3.1
+  node: circleci/node@5.0.2
+  aws-cli: circleci/aws-cli@3.1.1
   eb: circleci/aws-elastic-beanstalk@2.0.1
 jobs:
   build:
     docker:
       - image: 'cimg/base:stable'
     steps:
-      - node/install
+      - node/install:
+          node-version: '14.15.1'
       - checkout
       - aws-cli/setup
       - eb/setup
