--- a/udagram/udagram-api/.elasticbeanstalk/config.yml
+++ b/udagram/udagram-api/.elasticbeanstalk/config.yml
@@ -1,6 +1,11 @@
 branch-defaults:
   default:
     environment: udagram-api-dev
+    group_suffix: null
+environment-defaults:
+  udagram-api-dev:
+    branch: null
+    repository: null
 global:
   application_name: udagram-api
   branch: null
@@ -11,7 +16,7 @@ global:
   instance_profile: null
   platform_name: null
   platform_version: null
-  profile: default
+  profile: eb-cli
   repository: null
   sc: null
   workspace_type: Application
