--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,3 +31,19 @@ jobs:
       - run:
           name: Deploy Backend Application
           command: npm run api:deploy
+
+workflows:
+  udagram:
+    jobs:
+      - build
+      - hold:
+          filters:
+            branches:
+              only:
+                - master
+          type: approval
+          requires:
+            - build
+      - deploy:
+          requires:
+            - hold
