--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,12 @@ workflows:
           type: approval
           requires:
             - build
-      - deploy:
+      - deploy
+      - hold:
+          filters:
+            branches:
+              only:
+                - master
+          type: approval
           requires:
-            - hold
+            - deploy
